# zaza

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  LICENSE  README.md  SECURITY.md  build.zig  build.zig.zon  builder.zig  dependencies.zig  install-zig.ps1  route.zig  vex  zaza  zigcpp.zig
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
benchmarks/: README.md  build.zig  cmake_comparison.zig  memory_benchmark.zig  performance_benchmark.zig  scalability_benchmark.zig
build_lib/: build_graph.zig  build_steps.zig  build_viewer.zig  cpp_example.zig  interop_hints.zig  presets.zig  server.zig  static_server.zig  vex_cmd.zig
docs/: CMAKE_PARITY.md  EXAMPLES.md  IMPLEMENTATION.md  JUCE_WINDOWS.md  ROADMAP.md  SYNTAX_REFERENCE.md
examples/benchmark_workflow/: build.zig
examples/bindings/: build.zig
examples/build_lib/: vex_cmd.zig  zaza_cmd.zig
examples/cmake/: build.zig
examples/cmake_combo/: build.zig
examples/cmake_net/: build.zig
examples/cmake_shim/: build.zig
examples/cross_compile_cli/: build.zig
examples/cxx20_modules/: README.md  build.zig
examples/generated_code/: build.zig
examples/generated_headers/: build.zig
examples/hello_vex/: build.zig
examples/hello_zaza/: build.zig
examples/interface_object_graph/: build.zig
examples/json/: CMakeLists.txt  build.zig  build_steps.zig
examples/json/build_lib/: build_steps.zig  cpp_example.zig
examples/juce/: CMakeLists.txt  build.zig  build_lib
examples/juce/src/: main.cpp
registry/: registry.json
scripts/: install-zig.ps1  vex.zig  zaza.zig
src/: main.cpp  simple_example.cpp  working_test.cpp  working_test.zig
tests/: all_tests.zig  test_all.zig  test_alloc_print.zig  test_build_graph.zig  test_builder.zig  test_builder_only.zig  test_cmake_interop.zig  test_cpp_example_api.zig  test_cpp_targets.zig  test_dependencies.zig  test_dependency_ux.zig  test_deps_import_only.zig  test_deps_only.zig  test_deps_simple.zig  test_fetch.zig  test_fetch_minimal.zig  test_interop_hints.zig  test_interop_hints_full.zig  test_manager_init.zig  test_presets_full.zig  test_string_split.zig  test_workflows.zig  test_zigcpp.zig
wiki/: README.md  app.js  index.html  styles.css
(+67 files in other folders)
